<resources>
    <string name="app_name" translatable="false">Salón Machala</string>
    <string name="mail" translatable="false">salonmachala@gmail.com</string>
    <string name="web" translatable="false"><a href="http://salonmachala.org/">http://salonmachala.org/</a></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuraciones</string>
    <string name="permiso_camara">Se necesita hacer uso de la cámara para esta función y se le ha negado el permiso. Deséa activarlo manualmente?</string>
    <string name="permiso_write">Se necesita hacer uso del almacenamiento del dispositivo para guardar la información y se le ha negado el permiso. Deséa activarlo manualmente?</string>
    <string name="ver_artista_obra_">Ver información de:</string>
    <string name="autor_str">AUTOR</string>
    <string name="obra_str">OBRA</string>

    <string name="no_qr">Obra no registrada</string>
    <string name="cargando_splash">Cargando Informacion del evento</string>

    <string name="conexion">Conexión a internet necesaria</string>
    <string name="conexion_requiere">Es necesaria la conexión a datos durante la primera ejecución para obtener datos iniciales del evento.</string>

    <string name="obra_info">INFORMACIÓN DE LA OBRA</string>
    <string name="titulo_str_">TÍTULO:</string>
    <string name="autor_str_">AUTOR:</string>
    <string name="fecha_str_">FECHA:</string>
    <string name="anio_str_">AÑO:</string>
    <string name="tecnica_str_">TÉCNICA:</string>
    <string name="dimensiones_str_">DIMENSIONES:</string>
    <string name="descripcion_str">DESCRIPCIÓN</string>

    <string name="artista_info">INFORMACIÓN DE ARTISTA</string>
    <string name="nombre_str_">NOMBRE:</string>
    <string name="nacionalidad_str_">NACIONALIDAD:</string>
    <string name="edad_str_">EDAD:</string>
    <string name="biografia_str">BIOGRAFÍA</string>

    <string name="title_activity_abrir_imagen">abrirImagen</string>

    <string name="inicio_nav">Inicio</string>

    <string name="premio_nav" translatable="false">Premio Musa Paradisiaca</string>
    <string name="artistas_invitados_nav">Artistas Invitados</string>
    <string name="invitado_especial_nav">Personaje Invitado Especial</string>
    <string name="artistas_nav">Artistas</string>
    <string name="obras_nav">Obras</string>
    <string name="premios">Premiados</string>
    <string name="creditos">Créditos</string>
    <string name="permiso_requerido">El permiso es requerido para la ejecución.</string>

    <string name="opciones_nav">Funciones Adicionales</string>
    <string name="escanear_qr">Escanear QR</string>
    <string name="idioma_nav"><![CDATA[Español <—> English ]]></string>
    <string name="cambiar_idioma">Seguro que desea cambiar el idioma a Inglés?\nLa aplicacion se reiniciará.</string>
    <string name="cambiar_idioma2">Seguro que desea cambiar el idioma a Inglés?\nLa aplicacion se cerrará.</string>

    <string name="argumento">Argumento</string>
    <string name="anios">años</string>


    <string name="primer_puesto">Primer Premio</string>
    <string name="segundo_puesto">Segundo Premio</string>
    <string name="tercer_puesto">Tercer Premio</string>
    <string name="primera_mencion">Mención de Honor</string>
    <string name="segunda_mencion">Mención de Honor</string>
    <string name="tercera_mencion">Mención de Honor</string>
    <string name="cuarta_mencion">Mención de Honor</string>
    <string name="mencion">Mención</string>
    <string name="artista_orense">Reconocimiento al Artista Orense</string>


    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="presiones_2_veces_salir">Presiona de nuevo para salir.</string>
    <string name="antecedentes_nav">Antecedentes</string>
    <string name="actualizacion_disponible">Actualización Disponible</string>
    <string name="proyeccion_nav">Proyección</string>
    <string name="actualizacion_descripcion">Actualice la aplicacion para acceder a nueva información</string>
    <string name="jurados_nav">Miembros del jurado</string>
    <string name="curaduria_nav">Curaduría Pedagógica</string>
    <string name="introduccion_nav">Introducción por: Alcalde de Machala</string>
    <string name="brochure_nav">Folleto digital</string>
    <string name="abrir_brochure">Se procederá a abrir el folleto fuera de la aplicación.\n Deséa continuar?</string>
    <string name="web_brochure" translatable="false">https://issuu.com/salonmachala/docs/sm.brosch.digital</string>
    <string name="informacion">Información</string>
    <string name="exposicion_multi">Exposición multidisciplinaria</string>
    <string name="invitados_obras">Invitados y obras</string>
    <string name="web_catalogo" translatable="false">https://issuu.com/salonmachala/docs/salon_machala_2016</string>
    <string name="catalogo_nav">Catálogo digital</string>
    <string name="abrir_catalogo">Se procederá a abrir el catálogo fuera de la aplicación.\n Deséa continuar?</string>

</resources>
