<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ext="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="6dp"
    tools:context=".ObraActivity">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="0.4">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/foto"
            android:src="@drawable/black"
            android:layout_weight="0.4" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_weight="0.6">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/scroll_layout_gravity"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="@string/titulo_str_"
                    android:id="@+id/textView2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="Nombre del titulo"
                    android:id="@+id/titulo"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="@string/autor_str_"
                    android:id="@+id/textView4"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="Nombre del autor"
                    android:id="@+id/autor"
                    android:clickable="true"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="@string/tecnica_str_"
                    android:id="@+id/textView6"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="tecnica"
                    android:id="@+id/tecnica"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="@string/dimensiones_str_"
                    android:id="@+id/textView3"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="dimensiones"
                    android:id="@+id/dimensiones"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="@string/anio_str_"
                    android:id="@+id/textView10"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    style="@style/size_tv_obras"
                    android:text="Fecha"
                    android:id="@+id/fecha"
                    android:layout_marginLeft="20dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            style="@style/size_tv_bio_des"
            android:text="@string/descripcion_str"
            android:id="@+id/textView8"
            android:textStyle="bold" />


        <widget.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/wv_descripcion" />

    </LinearLayout>


</LinearLayout>
