<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ver_artista_obra_"
        android:id="@+id/titulo_dialogo"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:paddingLeft="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/autor_str"
                android:id="@+id/textView5"
                android:gravity="center_horizontal" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:id="@+id/ib_autor"
                android:scaleType="center"
                android:src="@drawable/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="el nombre del autor este"
                android:id="@+id/tv_nombre_autor"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/obra_str"
                android:id="@+id/textView7"
                android:gravity="center_horizontal" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:id="@+id/ib_obra"
                android:scaleType="center"
                android:src="@drawable/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="el nombre de la obra esta"
                android:id="@+id/tv_nombre_obra"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>

    <widget.JustifiedTextView
    android:layout_width="0dp"
    android:layout_height="0dp"></widget.JustifiedTextView>

</LinearLayout>