<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ext="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="6dp"
    android:background="@drawable/textura_repeat"
    tools:context=".ObraActivity">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="0.4">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/iv_foto"
            android:src="@drawable/black"
            android:layout_weight="0.4" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_weight="0.6">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/scroll_layout_gravity"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nombre_str_"
                    style="@style/size_tv_artistas"
                    android:id="@+id/textView2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Nombre del titulo"
                    style="@style/size_tv_artistas"
                    android:id="@+id/tv_nombre"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nacionalidad_str_"
                    style="@style/size_tv_artistas"
                    android:id="@+id/textView4"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Nombre del autor"
                    android:id="@+id/tv_nacionalidad"
                    style="@style/size_tv_artistas"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/edad_str_"
                    style="@style/size_tv_artistas"
                    android:id="@+id/textView6"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Fecha"
                    style="@style/size_tv_artistas"
                    android:id="@+id/tv_edad"
                    android:layout_marginLeft="20dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/biografia_str"
            style="@style/size_tv_bio_des"
            android:id="@+id/textView8"
            android:textStyle="bold" />

        <widget.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/wv_bibliografia" />


    </LinearLayout>


</LinearLayout>
