<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ext="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="6dp"
    android:background="@drawable/textura_repeat"
    tools:context=".ObraActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/iv_foto"
        android:src="@drawable/black"
        android:layout_weight="0.6" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="0.4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="2dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nombre_str_"
                    style="@style/size_tv_artistas"
                    android:id="@+id/textView2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Nombre del titulo"
                    style="@style/size_tv_artistas"
                    android:id="@+id/tv_nombre"
                    android:minLines="2"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="2dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nacionalidad_str_"
                    style="@style/size_tv_artistas"
                    android:id="@+id/textView4"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Nombre del autor"
                    android:id="@+id/tv_nacionalidad"
                    style="@style/size_tv_artistas"
                    android:minLines="2"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="2dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/edad_str_"
                    style="@style/size_tv_artistas"
                    android:id="@+id/textView6"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Fecha"
                    style="@style/size_tv_artistas"
                    android:id="@+id/tv_edad"
                    android:minLines="2"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
